[package]
name = "dist-kv"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"]}
anyhow = "1.0.77"
tokio = { version = "1", features = ["full"]}

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html